addressing review comments, first iteration